ditch v1 url versioning, yuck
